--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
-    // TabLayout
+    // RecyclerView
+    compile 'com.android.support:recyclerview-v7:26.0.+'
 
 
 }
